login correctly aligned

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -34,6 +34,8 @@
     display: flex;
     justify-content: center;
     cursor: pointer;
+    padding:10px;
+    color: blue;
   }
   
   
