--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -34,5 +34,7 @@
     display: flex;
     justify-content: center;
     cursor: pointer;
+    padding:10px;
+    color: blue;
   }
   
